--- a/3_preprocesamiento.Rmd
+++ b/3_preprocesamiento.Rmd
@@ -211,6 +211,59 @@ sum(eigen(rho)$values)
 eigen(rho)$values/sum(eigen(rho)$values)
 #rho >1
 abline(h=1, col="red")
+##########################
+#####matriz de covarianza
+###########################
+sigma<-cov(bdmun1[,-c(1,2)])
+#descomposición espectral
+A<-eigen(sigma)$vectors
+lambda<-diag(eigen(sigma)$values)
+A%*%lambda%*%t(A)
+#matriz de componentes. 
+Ys<-as.matrix(bdmun1[,-c(1,2)])%*%A
+cor(Y)
+corrplot(cor(Ys))
+#eligiendo los componentes a retener
+#scree plot
+plot(1:7,eigen(sigma)$values, type="b")
+eigen(sigma)$values
+round(eigen(sigma)$values/sum(eigen(sigma)$values),4)
+##########################
+#####Transformar los datos para evitar el efecto demográfico
+###########################
+bdmun2<-bdmun %>% 
+  mutate(cc=cc/emitidos,
+         creemos=creemos/emitidos,
+         fpv=fpv/emitidos,
+         mas.ipsp=mas.ipsp/emitidos,
+         pan.bol=pan.bol/emitidos,
+         blancos=blancos/emitidos,
+         nulos=nulos/emitidos) %>% 
+  select(-emitidos, -inscritos, -validos)
+corrplot(cor(bdmun2[,-c(1,2)]))
+###########################
+#matriz de covarianza
+###########################
+sigma<-cov(bdmun2[,-c(1,2)])
+#descomposición espectral
+A<-eigen(sigma)$vectors
+lambda<-diag(eigen(sigma)$values)
+A%*%lambda%*%t(A)
+#matriz de componentes. 
+Ys<-as.matrix(bdmun2[,-c(1,2)])%*%A
+
+corrplot(cor(Ys))
+#eligiendo los componentes a retener
+#scree plot
+plot(1:7,eigen(sigma)$values, type="b")
+eigen(sigma)$values
+round(eigen(sigma)$values/sum(eigen(sigma)$values),4)
+
+boxplot(Y[,1])
+boxplot(Ys[,1])
+
+corrplot(cor(cbind(bdmun2[,-c(1,2)],Ys[,1:2])))
+xx<-cbind(bdmun2,Ys[,1:2])
 ```
 
 ### Librerías en R
@@ -218,21 +271,22 @@ abline(h=1, col="red")
 ```{r}
 library(explor) 
 # Comandos ACP
-m2<-prcomp(bdmun1[,-c(1,2)], scale. = T, center = T)
+m2<-prcomp(bdmun2[,-c(1,2)], scale. = T, center = T)
 m2$sdev^2# eigen valores
 m2$rotation# eigen vectores
-m2$x #matriz de datos con los componetnes
+m2$x #matriz de datos con los componentes
 screeplot(m2)
 summary(m2)
 biplot(m2)#biplot
 explor(m2)#de forma visual
 #Comando princomp
-m3<-princomp(bdmun1[,-c(1,2)], cor = T)#tarea: indagar
+m3<-princomp(bdmun2[,-c(1,2)], cor = T)#tarea: indagar
 summary(m3)
 plot(m3)
 m3$sdev^2#eigen valores
 m3$loadings# eigen vectores
 m3$scores# Matriz de datos con los componentes
+biplot(m3)#biplot
 explor(m3)
 ```
 
